appId: ${MAESTRO_APP_ID}
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow:
    when:
      visible: 'Respect de ta vie privée'
    file: 'reusableFlows/FirstLaunch.yml' # First Launch
- runFlow:
    when:
      visible: 'Rechercher des offres'
    file: 'reusableFlows/components/buttons/SimpleActionButtonSearchOffers.yml'
- runFlow:
    when:
      visible: 'Recherche'
    file: 'reusableFlows/components/buttons/SimpleActionButtonSearch.web.yml'
- tapOn: 'Cinéma'
- runFlow:
    when:
      visible: 'Catégories'
    file: 'reusableFlows/features/search/SearchCategoryReinit.yml'
- tapOn: 'Offre, artiste, lieu culturel...'
- runFlow:
    when:
      visible: 'Réinitialiser la recherche'
    file: 'reusableFlows/features/search/SearchTextReinit.yml'
- inputText: ${MAESTRO_PHYSICAL_OFFER}
- pressKey: Enter
- runFlow:
    when:
      visible: ${MAESTRO_PHYSICAL_OFFER}
    file: 'reusableFlows/components/buttons/SimpleActionButtonSelectionOfferPhysic.yml'
# Mise en favoris
- tapOn:
    id: 'animated-icon-favorite'
- runFlow: reusableFlows/features/auth/ToLogin.yml # Se connecter
- runFlow: reusableFlows/components/buttons/DoubleActionButtonConnect.yml
- runFlow:
    when:
      visible: 'Plus tard'
    file: 'reusableFlows/features/auth/QpiPhysical.yml'
- runFlow:
    when:
      visible: 'Rechercher des offres'
    file: 'reusableFlows/components/buttons/SimpleActionButtonSearchOffers.yml'
- runFlow:
    when:
      visible: 'Recherche'
    file: 'reusableFlows/components/buttons/SimpleActionButtonSearch.web.yml'
- runFlow:
    when:
      visible: 'Catégories'
    file: 'reusableFlows/features/search/SearchCategoryReinit.yml'
- runFlow:
    when:
      visible: 'Rechercher'
    file: 'reusableFlows/components/buttons/SimpleActionButtonSearch.yml'
- runFlow:
    when:
      visible: 'Réinitialiser la recherche'
    file: 'reusableFlows/features/search/SearchTextReinit.yml'
- tapOn:
    id: 'animated-icon-favorite'
- tapOn:
    id: 'animated-icon-favorite-filled'
- tapOn:
    id: 'animated-icon-favorite'
- tapOn:
    id: 'animated-icon-back'
- runFlow: reusableFlows/components/buttons/SimpleActionButtonMyFavorite.yml
- assertVisible: '1 favori'
- assertVisible: 'Supprimer'
- assertVisible: 'Réserver'
- tapOn: 'Supprimer'
- assertVisible:
    text: 'Mes favoris'
    index: 0
- assertVisible: 'Retrouve toutes tes offres en un clin d’oeil'
- assertVisible: "Tu n’as pas encore de favori\_?\nExplore le catalogue pass Culture\
    \ et ajoute les offres en favori pour les retrouver facilement\_!"
- assertVisible: 'Découvrir le catalogue'
- tapOn: 'Découvrir le catalogue'
- assertVisible: 'Rechercher des offres'
- runFlow: reusableFlows/StopApp.yml # Stop App
