appId: ${MAESTRO_APP_ID}
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow:
    when:
      visible: 'Respect de ta vie privée'
    file: 'reusableFlows/FirstLaunch.yml' # First Launch
- runFlow:
    when:
      visible: 'Rechercher des offres'
    file: 'reusableFlows/components/buttons/DoubleActionButtonSearchOffers.yml'
- runFlow:
    when:
      visible: 'Recherche'
    file: 'reusableFlows/components/buttons/SimpleActionButtonSearch.web.yml'
- tapOn: 'Cinéma'
- runFlow:
    when:
      visible: 'Catégories'
    file: 'reusableFlows/features/search/SearchCategoryReinit.yml'
- tapOn: 'Offre, artiste, lieu culturel...'
- runFlow:
    when:
      visible: 'Réinitialiser la recherche'
    file: 'reusableFlows/features/search/SearchTextReinit.yml'
- inputText: ${MAESTRO_EVENT_OFFER}
- pressKey: Enter
- runFlow:
    when:
      visible: ${MAESTRO_EVENT_OFFER}
    file: 'reusableFlows/components/buttons/SimpleActionButtonSelectionOfferEvent.yml'
- runFlow: reusableFlows/components/buttons/SimpleActionButtonBookerOffer.yml
- runFlow: reusableFlows/features/auth/ToLogin.yml # Se connecter
- runFlow: reusableFlows/components/buttons/DoubleActionButtonConnect.yml
- runFlow:
    when:
      visible: 'Plus tard'
    file: 'reusableFlows/features/auth/QpiEvent.yml'
- runFlow:
    when:
      visible: 'Rechercher des offres'
    file: 'reusableFlows/components/buttons/SimpleActionButtonSearchOffers.yml'
- runFlow:
    when:
      visible: 'Recherche'
    file: 'reusableFlows/components/buttons/SimpleActionButtonSearch.web.yml'
- runFlow:
    when:
      visible: 'Réserver l`offre'
    file: reusableFlows/components/buttons/SimpleActionButtonBookerOffer.yml
- tapOn: 'Duo' # Filtre offre Duo
- assertVisible: 'Uniquement les offres duo'
- assertVisible: 'Seules les sorties seront affichées'
- tapOn:
    id: 'Interrupteur limitDuoOfferSearch'
- assertVisible: 'Réinitialiser'
- tapOn: 'Réinitialiser'
- tapOn:
    id: 'Interrupteur limitDuoOfferSearch'
- runFlow: reusableFlows/components/buttons/SimpleActionButtonSearch.yml
# TODO(PC-25008) : trouver une solution pour cliquer sans passer par la position
- tapOn:
    point: '49%,84%'
- tapOn:
    point: '49%,84%'
- assertVisible: 'Voir les disponibilités'
- tapOn: 'Voir les disponibilités'
- tapOn: '15'
- assertVisible: 'Valider la date'
- tapOn: 'Valider la date'
- assertVisible: 'Choix des options'
- assertVisible: 'Horaire'
# TODO(PC-25008) : trouver une solution pour cliquer sans passer par la position
- tapOn:
    point: '50%,75%'
- assertVisible: 'Valider lʼhoraire'
- tapOn: 'Valider lʼhoraire'
- assertVisible: 'Choix des options'
- tapOn: 'Nombre de places'
- assertVisible: 'Solo'
- assertVisible: 'Duo'
# TODO(PC-25008) : trouver une solution pour cliquer sans passer par la position
- tapOn:
    point: '53%,72%'
- assertVisible: 'Finaliser ma réservation'
- tapOn: 'Finaliser ma réservation'
- assertVisible: 'Détails de la réservation'
- assertVisible: "Les biens acquis ou réservés sur le pass Culture sont destinés à\
    \ un usage strictement personnel et ne peuvent faire l’objet de revente."
- assertVisible: 'Informations'
- assertVisible: 'Lieu de l’évènement'
- assertVisible: 'Conditions d’annulation'
- assertVisible: 'Confirmer la réservation'
- runFlow: reusableFlows/components/buttons/SimpleActionButtonConfirmReservation.yml
- assertVisible: "Réservation confirmée\_!"
- assertVisible: "Tu peux retrouver toutes les informations concernant ta réservation\
    \ sur l’application."
- assertVisible: 'Voir ma réservation'
- assertVisible: 'Partager l’offre'
- assertVisible: 'Retourner à l’accueil'
- tapOn: 'Voir ma réservation'
- scrollUntilVisible:
    element: 'Annuler ma réservation'
    direction: DOWN
- runFlow: reusableFlows/components/buttons/DoubleActionButtonCancelMyReservation.yml
- assertVisible: 'Réservation annulée'
- assertVisible: 'Réservations terminées'
- runFlow: reusableFlows/StopApp.yml # Stop App
