appId: ${MAESTRO_APP_ID}
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow:
    when:
      visible: 'Respect de ta vie privée'
    file: 'reusableFlows/FirstLaunch.yml' # First Launch
- runFlow:
    when:
      visible: 'Rechercher des offres'
    file: 'reusableFlows/components/buttons/DoubleActionButtonSearchOffers.yml'
- runFlow:
    when:
      visible: 'Recherche'
    file: 'reusableFlows/components/buttons/SimpleActionButtonSearch.web.yml'
- tapOn: 'Cinéma'
- runFlow:
    when:
      visible: 'Catégories'
    file: 'reusableFlows/features/search/SearchCategoryReinit.yml'
- tapOn: 'Offre, artiste, lieu culturel...'
- runFlow:
    when:
      visible: 'Réinitialiser la recherche'
    file: 'reusableFlows/features/search/SearchTextReinit.yml'
- runFlow:
    when:
      visible:
        id: 'Ouvrir la modale de localisation depuis la recherche'
    file: 'reusableFlows/features/location/resetLoc.yml'
- inputText: ${MAESTRO_EVENT_OFFER}
- pressKey: Enter
- runFlow:
    when:
      visible: ${MAESTRO_EVENT_OFFER}
    file: 'reusableFlows/components/buttons/SimpleActionButtonSelectionOfferEvent.yml'
- runFlow: reusableFlows/components/buttons/SimpleActionButtonBookerOffer.yml
- runFlow: reusableFlows/features/auth/ToLogin.yml # Se connecter
- runFlow: reusableFlows/components/buttons/DoubleActionButtonConnect.yml
- runFlow:
    when:
      visible: 'Plus tard'
    file: 'reusableFlows/features/auth/QpiEvent.yml'
- runFlow:
    when:
      visible: 'Réserver l`offre'
    file: reusableFlows/components/buttons/SimpleActionButtonBookerOffer.yml
- tapOn:
    enabled: true
    above:
      text: .*€
- assertVisible: 'Valider la date'
- tapOn: 'Valider la date'
- assertVisible: 'Choix des options'
- assertVisible: 'Horaire'
- tapOn:
    point: '50%,75%'

- assertVisible: 'Valider lʼhoraire'
- tapOn: 'Valider lʼhoraire'
- assertVisible: 'Choix des options'
- tapOn: 'Nombre de places'
- assertVisible: 'Solo'
- assertVisible: 'Duo'
- tapOn:
    point: '19%,74%'
- assertVisible: 'Finaliser ma réservation'
- tapOn: 'Finaliser ma réservation'
- assertVisible: 'Détails de la réservation'
- assertVisible: "Les biens acquis ou réservés sur le pass Culture sont destinés à\
    \ un usage strictement personnel et ne peuvent faire l’objet de revente."
- assertVisible: 'Informations'
- assertVisible: 'Lieu de l’évènement'
- assertVisible: 'Conditions d’annulation'
- runFlow: reusableFlows/components/buttons/SimpleActionButtonConfirmReservation.yml
- assertVisible: "Réservation confirmée\_!"
- assertVisible: "Tu peux retrouver toutes les informations concernant ta réservation\
    \ sur l’application."
- assertVisible: 'Voir ma réservation'
- assertVisible: 'Partager l’offre'
- assertVisible: 'Retourner à l’accueil'
- tapOn: 'Voir ma réservation'
- scrollUntilVisible:
    element: 'Annuler ma réservation'
    direction: DOWN
- tapOn: 'Annuler ma réservation'
- tapOn: 'Annuler ma réservation'
- assertVisible: 'La réservation a bien été annulée. Tu pourras la retrouver dans tes réservations terminées'
- runFlow:
    when:
      visible: 'Réservation terminées'
    file: 'reusableFlows/components/buttons/SimpleActionButtonSelectionOfferEvent.yml'
- tapOn:
    text: 'Réservations terminées'
    index: 1
- tapOn:
    text: ${MAESTRO_EVENT_OFFER}
    index: 0
- assertVisible: 'Voir les disponibilités'
- tapOn: 'Voir les disponibilités'
- tapOn:
    enabled: true
    above:
      text: .*€
- assertVisible: 'Valider la date'
- tapOn: 'Valider la date'
- assertVisible: 'Choix des options'
- assertVisible: 'Horaire'
- tapOn:
    point: '50%,75%'
- assertVisible: 'Valider lʼhoraire'
- tapOn: 'Valider lʼhoraire'
- assertVisible: 'Choix des options'
- tapOn: 'Nombre de places'
- assertVisible: 'Solo'
- assertVisible: 'Duo'
- tapOn:
    point: '19%,74%'
- assertVisible: 'Finaliser ma réservation'
- tapOn: 'Finaliser ma réservation'
- runFlow: reusableFlows/components/buttons/SimpleActionButtonConfirmReservation.yml
- assertVisible: "Réservation confirmée\_!"
- assertVisible: "Tu peux retrouver toutes les informations concernant ta réservation\
    \ sur l’application."
- assertVisible: 'Voir ma réservation'
- tapOn: 'Voir ma réservation'
- assertVisible: "Pour profiter de ta réservation, tu dois présenter ta carte d’identité\
    \ et ce code à 6 caractères. N’oublie pas que tu n’as pas le droit de le revendre\
    \ ou le céder."
- assertVisible: 'Ma réservation'
- tapOn:
    id: 'animated-icon-back'
- assertVisible:
    text: 'Mes réservations'
    index: 0
- assertVisible: 'Mes réservations'

- tapOn:
    point: '61%,16%'

- scrollUntilVisible:
    element: 'Annuler ma réservation'
    direction: DOWN
- runFlow: reusableFlows/components/buttons/SimpleActionButtonCancelMyReservation.yml
- runFlow: reusableFlows/features/bookings/BookingCancellationPage.yml # BookingCancellationPage
- runFlow: reusableFlows/components/buttons/SimpleActionButtonCancelMyReservation.yml
- assertVisible: 'Réservations terminées'
- runFlow: reusableFlows/StopApp.yml # Stop App
