appId: ${MAESTRO_APP_ID}
---
# TODO :(PC-25011): Désactiver le reCaptcha par défaut si on run les tests E2E ENABLE_NATIVE_APP_RECAPTCHA
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow:
    when:
      visible: "Respect de ta vie privée"
    file: "reusableFlows/FirstLaunch.yml" # First Launch
- runFlow: reusableFlows/components/buttons/SimpleActionButtonMyFavorite.yml
- runFlow: reusableFlows/components/buttons/SimpleActionButtonCreateAccount.yml
- runFlow: reusableFlows/features/profile/AccountCreationPage.yml # Creation Page
- runFlow: reusableFlows/features/auth/CguPage.yml # Cgu Page
- runFlow: reusableFlows/features/auth/ConfirmationEmailPage.yml # ConfirmationEmail Page
- runFlow: reusableFlows/StopApp.yml # Stop App
- runFlow:
      when:
          visible: "Revenir en haut de la page"
      file: "reusableFlows/MailNative.yml"
- swipe:              # This command swipes in the left direction from the middle of the device.
    direction: DOWN
- runFlow: reusableFlows/SearchMail.yml # SearchMail Page
- runFlow:
      when:
          visible: "Afficher le texte des messages précédents"
      file: "reusableFlows/DoublonsMail.yml"

- runFlow: reusableFlows/components/buttons/SimpleActionButtonConfirmEmail.yml

- scrollUntilVisible:
    element: "confirmation de l'email"
    direction: DOWN

- tapOn: "Confirmer mon adresse email"
- runFlow: reusableFlows/features/auth/IdCheckPage.yml # IdCheck Page
- runFlow: reusableFlows/features/identityCheck/StepperPage.yml # Stepper Page
- runFlow: reusableFlows/features/identityCheck/NumberPhone.yml #Number Phone

#ValidationCodePhone
- runFlow: reusableFlows/StopApp.yml # Stop App
- runFlow: reusableFlows/LaunchAppGmail.yml # Launch App
- runFlow:
    when:
      visible: "Revenir en haut de la page"
    file: "reusableFlows/MailNative.yml"
- swipe:              # This command swipes in the left direction from the middle of the device.
    direction: DOWN
- runFlow: reusableFlows/SearchMail.yml # SearchMail Page
- runFlow:
    when:
      visible: "Afficher le texte des messages précédents"
    file: "reusableFlows/DoublonsMail.yml"

- scrollUntilVisible:
    element: "Code de validation du téléphone"
    direction: DOWN

- tapOn: "Code de validation du téléphone"
- runFlow: reusableFlows/LaunchApp.yml # Launch App
