appId: ${MAESTRO_APP_ID}
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow:
    when:
      visible: 'Respect de ta vie privée'
    file: 'reusableFlows/FirstLaunch.yml' # First Launch
- runFlow: reusableFlows/components/buttons/SimpleActionButtonMyFavorite.yml
- runFlow: reusableFlows/components/buttons/SimpleActionButtonCreateAccount.yml
- tapOn: 'tonadresse@email.com'
- inputText: ${MAESTRO_VALID_EMAIL}
- tapOn: 'Continuer vers l’étape Mot de passe'
- tapOn: 'Continuer vers l’étape Mot de passe'
- inputText: ${MAESTRO_PASSWORD}
# TODO(PC-25008) : trouver une solution pour cliquer sans passer par la position
- tapOn:
    point: '50%,40%'
- tapOn: 'Continuer vers l’étape Date de naissance'

- runFlow: reusableFlows/StopApp.yml # Stop App
