appId: ${MAESTRO_APP_ID}
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow:
    when:
      visible: "Respect de ta vie privée"
    file: "reusableFlows/FirstLaunch.yml" # First Launch
- runFlow: reusableFlows/components/buttons/SimpleActionButtonMyProfile.yml
- scrollUntilVisible:
    element: "Confidentialité"
    direction: DOWN

- scrollUntilVisible:
    element: "Suivre le pass Culture"
    direction: DOWN
- assertVisible: "Suivre le pass Culture"

- tapOn: "Confidentialité"
- scrollUntilVisible:
      element: "Enregistrer mes choix"
      direction: DOWN
- tapOn: "Enregistrer mes choix"
- assertVisible: "Confidentialité"

- runFlow: reusableFlows/StopApp.yml # Stop App