appId: ${MAESTRO_APP_ID}
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow:
    when:
      visible: "Respect de ta vie privée"
    file: "reusableFlows/FirstLaunch.yml" # First Launch
- runFlow: reusableFlows/components/buttons/SimpleActionButtonMyProfile.yml
- scrollUntilVisible:
    element: "Confidentialité"
    direction: DOWN

- scrollUntilVisible:
      element: "Informations légales"
      direction: DOWN

- scrollUntilVisible:
    element: "Suivre le pass Culture"
    direction: DOWN
- assertVisible: "Suivre le pass Culture"

- tapOn: "Informations légales"
- scrollUntilVisible:
      element: "Conditions Générales d’Utilisation"
      direction: DOWN
- tapOn: "Conditions Générales d’Utilisation"
- tapOn: "Retour"
- tapOn: "Charte de protection des données personnelles"
- tapOn: "Retour"
- runFlow: reusableFlows/components/buttons/SimpleActionButtonBack.yml
- runFlow: reusableFlows/StopApp.yml # Stop App