appId: ${MAESTRO_APP_ID}
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow:
    when:
      visible: "Respect de ta vie privée"
    file: "reusableFlows/FirstLaunch.yml" # First Launch
- runFlow: reusableFlows/components/buttons/SimpleActionButtonMyProfile.yml
- runFlow: reusableFlows/features/auth/ToLogin.yml # Se connecter
- runFlow: reusableFlows/components/buttons/DoubleActionButtonConnect.yml
- runFlow:
    when:
      visible: 'Plus Tard'
    file: reusableFlows/components/buttons/SimpleActionButtonLater.yml
- runFlow:
    when:
      visible: "Réactiver mon compte"
    file: "reusableFlows/components/buttons/SimpleActionButtonReactivateAccount.yml"
- runFlow: reusableFlows/components/buttons/SimpleActionButtonMyProfile.yml
- tapOn: "Informations personnelles"
- assertVisible:
    text: "Supprimer mon compte"
    index: 1
- tapOn: "Supprimer mon compte"
- runFlow: reusableFlows/features/Profile/AccountDeletionConfirmationPage.yml
- tapOn: "Supprimer mon compte"
# Bug potentiels page s'affiche 1sec et disparait /- runFlow: reusableFlows/features/Profile/AccountDeletionPage.yml
- runFlow: reusableFlows/features/auth/ToLogin.yml
- runFlow: reusableFlows/components/buttons/DoubleActionButtonConnect.yml
- runFlow: reusableFlows/features/auth/AccountDeactivationPage.yml
- tapOn: "Réactiver mon compte"
- runFlow: reusableFlows/features/auth/AccountReactivationPage.yml
- tapOn: "Découvrir le catalogue"
- assertVisible: "Bonjour Test-e2e"
- assertVisible: "Tu as 300\_€ sur ton pass"
- runFlow: reusableFlows/StopApp.yml # Stop App