appId: com.google.android.gm
---
- runFlow: reusableFlows/LaunchAppGmail.yml # Launch App
- runFlow:
    when:
      visible: "Revenir en haut de la page"
    file: "reusableFlows/MailNative.yml"
- swipe:              # This command swipes in the left direction from the middle of the device.
    direction: DOWN
- runFlow: reusableFlows/SearchMail.yml # SearchMail Page

- runFlow:
    when:
      visible: "Afficher le texte des messages précédents"
    file: "reusableFlows/DoublonsMail.yml"

- tapOn: "Rechercher dans les messages"

- inputText: ${MAESTRO_MESSAGE_CODE_VALIDATION_TELEPHONE}
- scrollUntilVisible:
    element: "Code de validation du téléphone"
    direction: DOWN

- tapOn: "Code de validation du téléphone"
- tapOn:
    text: "Code de validation du téléphone"
    index: 1