appId: ${MAESTRO_APP_ID}
tags:
  - artist
onFlowStart:
  - runScript: ../common/deeplinks/DeepLink.js
---
- runFlow: ../common/lifecycle/LaunchApp.yml
- runFlow: ../common/lifecycle/StopApp.yml
- runFlow: ../common/deeplinks/DeeplinkToHome.yml

- runFlow: ../common/navigation/GoToSearchFromTabBar.yml

- tapOn: 'Catégorie Livres'
- tapOn: 'Sous-catégorie Mangas'

- assertVisible: 'Rechercher'
- runFlow: ../common/helpers/SetEverywhere.yml
- swipe:
    from:
      text: Les offres
    direction: UP

- assertVisible: 'Rechercher'
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn:
          text: 'Livre'
          index: 0

- runFlow:
    when:
      platform: iOS
    commands:
      - scroll
      - extractTextWithAI:
          query: "Le titre exacte d'une des offres Livre visible dans les résultats de recherche"
          outputVariable: 'offerResult'
      - tapOn: .*${offerResult}.*

- swipe:
    from:
      text: Livre
    direction: UP
- tapOn: '.*- Auteur.*'
- assertVisible: 'Ses oeuvres populaires'
- assertVisible: '.*Voir tout.*'

- runFlow: ../common/lifecycle/StopApp.yml
